--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -37,14 +37,11 @@
       <div class="col-12 col-sm-12">
         <h2 class="text-center" style="margin-top: 20px; font-weight:600;">Call for Papers</h2>
         <p style="padding: 20px;font-size: 20px; font-weight:500;">The scope of this conference is to provide a platform
-          for researchers,
-          engineers, academicians as well as industrial professionals from all over the world to present their research
-          results and development activities in various topics of Engineering and Technology, Sciences and
-          Social-Sciences,System Architectures, Software Engineering and Automation,Data-Driven Intelligent
-          Systems,Networks and Data Communication, Internet Of Things, Control and Embedded Systems, Engineering
-          Sciences. It allows participants an opportunity to discuss the recent developments in the field of
-          solidification computer science and management and review challenges faced by the community in the 21st
-          century. The conference consists of different tracks which are listed below as:</p>
+          for researchers, engineers, academicians as well as industrial professionals from all over the world to present their research
+          results and development activities in various topics of Computational Research and Data Analytics.
+           It allows participants an opportunity to discuss the recent developments in the field of solidification 
+           computer science and management and review challenges faced by the community in the 21st century. 
+          The conference consists of different tracks which are listed below as:</p>
         <div class="card p-4 mb-4">
           <h2 style="text-transform:uppercase" class="pl-3">TRACK 1: Data Analytics</h2>
           <div class="pl-5" style="font-weight: 400;font-size:1.2rem">
