--- a/paper_submission.html
+++ b/paper_submission.html
@@ -36,29 +36,30 @@
       <div class="col-12 col-sm-12">
         <h1 class="text-center" style="font-size:2.5rem;"><ins>Paper Submission</ins></h1>
         <p style="padding: 20px;font-size: 20px;">The Original unpublished Research Papers, Articles & Working papers
-          having maximum length of 25 pages on the topics related to the theme are invited for presentation/ publication
+          having maximum length of 8 pages on the topics related to the theme are invited for presentation/ publication
           in the conference proceedings.</p>
         <p style="padding: 30px;font-size: 20px;padding-bottom: 0%;"><strong>1.</strong>Kindly ensure that your paper is
-          formatted as per IOP Conference Proceedings Guidelines (not exceeding 25 pages written in A4 size). Please
-          refer the attached IOP formatting template for preparation of your paper. </p>
+          formatted as per Springer Guidelines (not exceeding 12 pages written in A4 size). Please
+          refer the attached Springer formatting template for preparation of your paper. </p>
         <p style="font-size: 20px;padding-left: 30px;padding-right: 20px;"><strong>2.</strong> All papers must be
-          submitted online via <a href="https://easychair.org/conferences/?conf=iccrda2020" target="_blank">easychair
-            submission portal.</a> </p>
+          submitted online via <a href="https://easychair.org/conferences/?conf=iccrda2020" target="_blank">Microsoft CMT
+            Submission portal.</a> </p>
         <p style="font-size: 20px;padding-left: 30px;padding-right: 20px;"><strong>3.</strong> All submissions will be
           thoroughly peer-reviewed by experts based on originality, significance, and clarity. </p>
         <p style="font-size: 20px;padding-left: 30px;padding-right: 20px;"><strong>4.</strong>Only papers presenting
           original content with novel research results or successful innovative applications will be considered for
-          publication in the conference proceedings (as chapters in edited volumes of IOP Conference Proceedings
-          [Material Science and Engineering] Series).</p>
+          publication in the conference proceedings (as chapters in edited volumes of Springer Series).</p>
         <h1 class="text-center" style="font-size:2.5rem"><ins>Plagiarism Policy</ins></h1>
         <p style="font-size: 20px;padding-left: 30px;padding-right: 20px;"><strong>1.</strong> The paper prior to
           submission should be checked for plagiarism from licensed plagiarism software like Turnitin / iAuthenticate
-          etc. The similarity content should not exceed 15% (in any case either self contents or others). Further, you
+          etc. The similarity content should not exceed 20% (in any case either self contents or others). Further, you
           have to strictly implement the following ethical guidelines for publication: </p>
         <p style="font-size: 20px;padding-left: 30px;padding-right: 20px;"><strong>2.</strong>Any form of
-          self-plagiarism or plagiarism from others’ work(s) should not be there in an article. </p>
+          self-plagiarism or plagiarism from other's work(s) should not be there in an article. If any model / concept / figure / table / data / conclusive comment by any previously published work is used in your article, 
+          you should properly cite a reference to the original work. </p>
         <p style="font-size: 20px;padding-left: 30px;padding-right: 20px;"><strong>3.</strong> Also language of
-          explaining it should not be same as language of the work from which you have adopted it. </p>
+          explaining it should not be same as language of the work from which you have adopted it. If you are using any copyrighted material, 
+          you should acquire prior permission from the copyright holder. </p>
       </div>
     </div>
   </div>
