--- a/publications.html
+++ b/publications.html
@@ -43,7 +43,7 @@
         Some of good quality papers will published in the SCI/Scopus indexed journals.:
       </p>
     </div>
-    <marquee> <img src="/gallery/computer.jpg" width="250" height="250">
+    <marquee> <img src="/ICCRDA-2024/gallery/computer.jpg" width="250" height="250">
       <img src="/gallery/research.jpg" width="250" height="250">
       <img src="/gallery/data.jpg" width="250" height="250">
     </marquee>
