--- a/special-session.html
+++ b/special-session.html
@@ -44,7 +44,7 @@
         <p style="font-size: 1.4rem;" class="mb-5">ICCRDA Conference team invites you to organize the special session in
           the International Conference on
           Computational Research and Data
-          Analytics (ICCRDA-2024), on 19-20th December 2024 of your research domain. We are diligently working to bring
+          Analytics (ICCRDA-2024), on 17-18th January 2025 of your research domain. We are diligently working to bring
           some of the most
           knowledgeable researchers from all over the world along with the leaders from the industry to explore the
           important topics
@@ -64,7 +64,7 @@
 
         <h2 class="mb-4">Highlights of the conference and Special Session Benefits:</h2>
         <div style="font-size: 1.4rem;">
-          <p>1. Proceedings in the reputed Scopus indexed proceedings.</p>
+          <p>1. Proceedings in the reputed Springer (Scopus) indexed proceedings.</p>
           <p>2. You will get 15% of the total fees collected in your session.</p>
           <p>3. The minimum number of registrations should be 8.</p>
           <p>4. Extended papers in SCI/Scopus Digital Library journals. We have already got approval from some Scopus
@@ -77,25 +77,25 @@
             technologies in the conference.</p>
 
           <p>If you are interested to conduct a special session, mail us the special session proposal at
-            <b>icicc.editor@gmail.com </b>latest by 10th June 2024.
+            <b>iccrda.congress@gmail.com </b>latest by 10th June 2024.
           </p>
         </div>
 
-        <h5 class="mb-4">All the accepted papers (after double blinded peer review) will be published in a Scopus
-          indexed proceedings
-          and further extended acceptedp apers will be published in the special issues of
+        <h5 class="mb-4">All the accepted papers (after double blinded peer review) will be published in a Springer 
+          Scopus indexed Proceedings and further extended acceptedp apers will be published in the special issues of
           SCI/SCOPUS/WoS/DBLP/ACM/EI indexed Journals.</h5>
 
         <div style="font-size: 1.4rem;">
           <p>Looking to see you in ICCRDA-2024.</p>
 
+        
           <p>Sincerely,</p>
 
           <p>Organizer and Convener</p>
         </div>
         <h3 class="mb-2">ICCRDA-2024</h3>
         <a href="gallery/Special-session-CFP-Template (Comsia).docx"
-          class="btn btn-primary mb-5">Special-session-CFP-Template(ICCRDA) <i class="fa fa-download"></i> </a>
+          class="btn btn-primary mb-5">Special_Session_ICCRDA <i class="fa fa-download"></i> </a>
       </div>
     </div>
   </div>
