--- a/special-session.html
+++ b/special-session.html
@@ -94,7 +94,7 @@
           <p>Organizer and Convener</p>
         </div>
         <h3 class="mb-2">ICCRDA-2024</h3>
-        <a href="gallery/Special-session-CFP-Template (Comsia).docx"
+        <a href="gallery/Special-Session-ICCRDA.docx"
           class="btn btn-primary mb-5">Special_Session_ICCRDA <i class="fa fa-download"></i> </a>
       </div>
     </div>
