--- a/index.html
+++ b/index.html
@@ -167,17 +167,17 @@
           <div class="card-body marquees">
             <marquee width="100%" behavior="scroll" direction="up" scrollamount="3" class="text-center dates mb-0"
               onmouseover="this.stop();" onmouseout="this.start();" height="270">
-              <a href="https://drive.google.com/drive/folders/1AM0Q3XT_5tGsSrFtTZEk82RRCXjcj_3U?usp=sharing"
-                class="dates text-center text-primary">Paper Format and Instructions</a>
+              <a href="http://dosci-conf.com/ManuscriptguidelinesforEnglishbooks.pdf"
+                class="dates text-center text-primary">Manuscript Guidelines</a>
               <hr id="hrr">
-              <a href="https://drive.google.com/drive/folders/1SUbkXnwAJNkoLEvAKBpLMWfEXua16_Gq?usp=sharing"
-                class="dates text-center text-primary">Simple Guidelines and Instructions</a>
+              <a href="http://dosci-conf.com/Checklist.pdf"
+                class="dates text-center text-primary">Checklist</a>
               <hr id="hrr">
-              <a href="https://drive.google.com/drive/folders/1bg_osZj4uuNHB7L05AALr_YkwyLa6FvJ?usp=sharing"
-                class="dates text-center text-primary">References Formatting</a>
+              <a href="/ICCRDA-2024/gallery/Springer DOC(1).zip"
+                class="dates text-center text-primary">Springer Word Template</a>
               <hr id="hrr">
-              <a href="https://publishingsupport.iopscience.iop.org/author-guidelines-for-conference-proceedings/"
-                class="dates text-center text-primary">Web Link for Proceedings Format</a>
+              <a href="/ICCRDA-2024/gallery/Springer Latex(1).zip"
+                class="dates text-center text-primary">Springer Latex Template</a>
             </marquee>
             <a href="downloads.html" class="btn btn-primary">See More</a>
           </div>
