--- a/downloads.html
+++ b/downloads.html
@@ -56,10 +56,10 @@
 
       </div>
       <div class="col col-12 col-lg-6 col-md-4">
-        <a href="/gallery/Springer DOC(1).zip" target="_blank"><button class="btn mb-2" style="width:100%;">
+        <a href="/ICCRDA-2024/gallery/Springer DOC(1).zip" target="_blank"><button class="btn mb-2" style="width:100%;">
             Springer Word Template <i class="fa fa-download"></i></button></a>
 
-        <a href="/gallery/Springer Latex.zip" target="_blank"><button class="btn" style="width:100%;">
+        <a href="/ICCRDA-2024/gallery/Springer Latex(1).zip" target="_blank"><button class="btn" style="width:100%;">
             Springer LaTex Template <i class="fa fa-download"></i></button></a>
 
       </div>
