--- a/Registrations.html
+++ b/Registrations.html
@@ -140,7 +140,7 @@
         <p style="font-family: 'Roboto', sans-serif;font-size: 20px; font-weight:500;">8. Participation Certificate </p> <br>
         <p style="font-family: 'Roboto', sans-serif;font-size: 20px; font-weight:500;"> **The Conference will be in Hybrid mode</p>
         <h1 class="text-center mt-5" style="font-family: 'Roboto', sans-serif;font-size:2.0rem; font-weight:600;">
-          Registration Fee For
+          Conference Accepted Paper Registration Fee For
           ICCRDA-2024 </h1>
         <div class="table-responsive" style="font-family: 'Roboto', sans-serif;">
           <table class="table table-striped mb-5">
@@ -150,27 +150,69 @@
 
                 <th>Category</th>
                 <th>Early Registration (Before 20th July, 2024)</th>
-                <th>Late Registration (20th July, 2024)
+                <th>Late Registration (After 20th July, 2024)
               </thead>
             </tr>
             <tr>
-              <td>Research Scholar/Student</td>
+              <td>Research Scholar/Student (Physical Mode)</td>
               <td>USD 250</td>
               <td>USD 300</td>
             </tr>
             <tr class="table-info">
-              <td>Academician </td>
+              <td>Research Scholar/Student (Online Mode)</td>
+              <td>USD 200</td>
+              <td>USD 250</td>
+            </tr>
+            <tr>
+              <td>Standard Authors (Physical Mode) </td>
               <td>USD 300</td>
               <td>USD 350</td>
             </tr>
-            <tr>
-              <td>Industrial Participants</td>
-              <td>USD 350 </td>
-              <td>USD 400</td>
+            <tr class="table-info">
+              <td>Standard Authors (Online Mode)</td>
+              <td>USD 250 </td>
+              <td>USD 300</td>
             </tr>
 
           </table>
         </div>
+        <p>•	(*Standard Paper size – 10 pages. Over length of paper charges $30 per extra page.)
+          •	(**Research Student Author - Those authors who are currently prusuing PHD, Masters degree
+           in a research organisation/University comes under this category. ) If you have any concerns 
+           regarding the registration policy or fees please feel to write us at iccrda.congress@gmail.com. 
+          </p>
+        <h1 class="text-center mt-5" style="font-family: 'Roboto', sans-serif;font-size:2.0rem; font-weight:600;">
+          Conference Participant Registration Fee for 
+          ICCRDA-2024 </h1>
+        <div class="table-responsive" style="font-family: 'Roboto', sans-serif;">
+          <table class="table table-striped mb-5">
+            <tr>
+              <thead class="thead-dark">
+
+
+                <th>Category</th>
+                <th>Early Registration (Before 20th July, 2024)</th>
+                <th>Late Registration (After 20th July, 2024)
+              </thead>
+            </tr>
+            <tr>
+              <td>Research Scholar/Student Participants</td>
+              <td>USD 150</td>
+              <td>USD 200</td>
+            </tr>
+            <tr class="table-info">
+              <td>Standard Participants</td>
+              <td>USD 200</td>
+              <td>USD 250</td>
+            </tr>
+            
+          </table>
+        </div>
+        <h3>NOTE:
+          The conference is non-residential and delegates are kindly requested to make their own arrangement 
+          for accommodation. If you have any query, please drop a mail to . All participants and authors abide
+           by the [TERMS AND CONDITIONS] as per the organizations guidelines.
+          </h3>
 
       </div>
     </div>
