--- a/Registrations.html
+++ b/Registrations.html
@@ -176,11 +176,11 @@
 
           </table>
         </div>
-        <p>•	(*Standard Paper size – 10 pages. Over length of paper charges $30 per extra page.)
+        <h4>•	(*Standard Paper size – 10 pages. Over length of paper charges $30 per extra page.)
           •	(**Research Student Author - Those authors who are currently prusuing PHD, Masters degree
            in a research organisation/University comes under this category. ) If you have any concerns 
            regarding the registration policy or fees please feel to write us at iccrda.congress@gmail.com. 
-          </p>
+        </h4>
         <h1 class="text-center mt-5" style="font-family: 'Roboto', sans-serif;font-size:2.0rem; font-weight:600;">
           Conference Participant Registration Fee for 
           ICCRDA-2024 </h1>
@@ -208,7 +208,7 @@
             
           </table>
         </div>
-        <h3>NOTE:
+        <h4><b>NOTE:</b>
           The conference is non-residential and delegates are kindly requested to make their own arrangement 
           for accommodation. If you have any query, please drop a mail to . All participants and authors abide
            by the [TERMS AND CONDITIONS] as per the organizations guidelines.
