--- a/Registrations.html
+++ b/Registrations.html
@@ -176,7 +176,7 @@
 
           </table>
         </div>
-        <h4>•	(*Standard Paper size – 10 pages. Over length of paper charges $30 per extra page.)
+        <h4>•	(*Standard Paper size : 10 pages. Over length of paper charges $30 per extra page.) <br>
           •	(**Research Student Author - Those authors who are currently prusuing PHD, Masters degree
            in a research organisation/University comes under this category. ) If you have any concerns 
            regarding the registration policy or fees please feel to write us at iccrda.congress@gmail.com. 
