--- a/publications.html
+++ b/publications.html
@@ -38,14 +38,14 @@
     <div style="padding: 20px;">
       <h1 class="text-center display-4" style="margin-top: 20px; font-weight: 600; font-size:2.8rem">Publications</h1>
       <p style="padding: 20px;font-size: 20px;text-align: justify;text-justify: inter-word;font-weight:500;">The proceedings of ICCRDA
-        2024 will be published in Scopus Indexed proceedings.
+        2024 will be published in Springer (Scopus) Indexed proceedings.
 
         Some of good quality papers will published in the SCI/Scopus indexed journals.:
       </p>
     </div>
-    <marquee> <img src="/ICCRDA-2024/gallery/computer.jpg" width="250" height="250">
-      <img src="/gallery/research.jpg" width="250" height="250">
-      <img src="/gallery/data.jpg" width="250" height="250">
+    <marquee> <img src="/ICCRDA-2024/gallery/aej.jpg" width="250" height="250">
+      <img src="/ICCRDA-2024/gallery/idt.jpg" width="250" height="250">
+      <!--<img src="/gallery/data.jpg" width="250" height="250">-->
     </marquee>
     <div class="container" style="display: none;">
       <div class="row">
