--- a/publications.html
+++ b/publications.html
@@ -43,9 +43,8 @@
         Some of good quality papers will published in the SCI/Scopus indexed journals.:
       </p>
     </div>
-    <marquee> <img src="/ICCRDA-2024/gallery/aej.jpg" width="250" height="250" alt="x">
+    <marquee> <img src="/ICCRDA-2024/gallery/aej.jpg" width="250px" height="250px">
       <img src="/ICCRDA-2024/gallery/idt.jpg" width="250" height="250">
-      <!--<img src="/gallery/data.jpg" width="250" height="250">-->
     </marquee>
     <div class="container" style="display: none;">
       <div class="row">
