--- a/conference_venue.html
+++ b/conference_venue.html
@@ -47,7 +47,7 @@
         <p style="font-size:20px;margin-top: 15px;"> <span style="font-weight: bold;">Address:</span> Duy Tan
           University, Da Nang, <span style="font-weight: bold;">Vietnam </span></p>
         <p style="font-size: 20px;" class="text-info"><span style="font-weight:bold;color:black">Email:</span>
-          icicc.editor@gmail.com </p>
+          iccrda.congress@gmail.com </p>
       </div>
     </div>
   </div>
