--- a/session-1.html
+++ b/session-1.html
@@ -40,7 +40,7 @@
 
   <h2 class="text-center" style="margin-top: 20px;">Special Sessions</h2>
   <br>
-  <div class="container mb-5">
+  <div class="container mb-5"  style="display: none;">
     <div class="row">
 
       <div class="col col-12 col-lg-6 col-md-4 mb-2">
