--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               <p href="#" class="dates text-center">Notification of Acceptance/Reject - 10th July 2024</p>
               <p href="#" class="dates text-center">Early Bird Registration - 20th July 2024</p>
               <p href="#" class="dates text-center">Final Paper Due - 30th August 2024</p>
-              <p href="#" class="dates text-center">Conference Date - 19-20th December 2024</p>
+              <p href="#" class="dates text-center">Conference Date - 17-18th January 2025</p>
             </marquee>
             <a href="important_dates.html" class="btn btn-primary ">See More</a>
           </div>
@@ -192,11 +192,9 @@
           <div class="card-body marquees">
             <marquee width="100%" behavior="scroll" direction="up" scrollamount="3" class="text-center dates mb-0"
               onmouseover="this.stop();" onmouseout="this.start();" height="270">
-              <a href="#" class="dates text-center text-primary d-none">Proceedings of ICCRDA-2024 has been approved by
-                IOP Conference
-                Series. All accepted papers of ICCRDA-2024 will be published in Material Science and Engineering Series
-                (Indexing:SCOPUS) </a>
-              <hr id="hrr">
+              <a href="#" class="dates text-center text-primary d-none">ICCRDA 2024 will be organsied by
+                 Duy Tan University, Vietnam in January 2025. </a>
+            <!--  <hr id="hrr">
               <a href="#" class="dates text-center text-primary d-none">Some of Selected Extended Papers will be Submit
                 for Publication in
                 SCI/SCI-E/SCOPUS Indexed Journals</a>
@@ -207,7 +205,7 @@
               <hr id="hrr">
               <a href="#" class="dates text-center text-primary d-none">Industry Persons will be Invited for Technical
                 Talk in Emerging
-                Areas of STEM</a>
+                Areas of STEM</a>-->
             </marquee>
             <a href="#" class="btn btn-primary ">See More</a>
           </div>
