--- a/js/prevconf.html
+++ b/js/prevconf.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css">
 
   <link rel="stylesheet" href="css/styles.css">
- <!--<link rel="icon" href="gallery/DTlogo.png" type="image/x-icon">-->
+  <link rel="icon" href="gallery/DTlogo.png" type="image/x-icon">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -22,36 +22,45 @@
 
 <body>
   <!-- scroll to top -->
-  
+  <div class="circle-container">
+    <svg class="circle-progress svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
+      <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
+    </svg>
+  </div>
   <div class="jumbotron">
   </div>
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top"></nav>
   <br>
-
   <div class="container">
     <div class="row row-content">
-      <div class="col-12 col-sm-12">
-        <h2 class="text-center" style="margin-top: 20px; font-weight:600;">Previous Conference (ICCRDA 2020)</h2>
-        <p style="padding: 20px;font-size: 20px; font-weight:500;">The first International Conference on Computational
-             Research and Data Analytics (ICCRDA-2020) organised jointly by Suleyman Demirel University, Turkey, 
-             Isparta Applied Sciences University and College of Engineering, Roorkee India in December 2020.
-              ICCRDA-2020 moved from Physical mode to Digital (Virtual) mode due to Pandemic COVID-19. 
-              The conference was able to attract a diverse range of engineering practitioners, academicians, scholars,
-               and industry delegates, with the reception of abstracts including more than 1200 authors from different 
-               parts of the world. More than 300 full-length papers have been received, among which the contributions
-                are focused on theoretical, computer simulation- based research, and laboratory-scale experiments.
-                 Amongst these manuscripts, 129 papers have been included in the IOP [Material Science and Engineering]
-                  proceedings.</p>
+      <div class="text-center col-12 col-sm-12 col-md-12 img-fluid">
+        <img src="gallery/DTlogo.png" alt="iccrda_logo" style="display:block;margin: 0 auto;" class="img-fluid img-KIITlogo">
+      </div>
+      <div class="col-12 col-sm-12 col-md-12 text-center">
+        <h1 class="text-center mt-4" style="font-size:55px;">Previous Conference (ICCRDA 2020)</h1>
+      </div>
+      <!-- <div class="container"><img src="gallery/duytancampus.jpg" alt=""></div> -->
+      <div class="col-12 col-sm-12 col-md-12 text-center">
+        <p class=" justify-content-center"
+          style="font-size: 20px; text-align:justify; text-justify:inter-word;font-weight:500;">The first
+           International Conference on Computational Research and Data Analytics (ICCRDA-2020) organised
+            jointly by Suleyman Demirel University, Turkey, Isparta Applied Sciences University and College 
+            of Engineering, Roorkee India in December 2020. ICCRDA-2020 moved from Physical mode to Digital
+             (Virtual) mode due to Pandemic COVID-19. The conference was able to attract a diverse range of
+              engineering practitioners, academicians, scholars, and industry delegates, with the reception 
+              of abstracts including more than 1200 authors from different parts of the world. More than 
+              300 full-length papers have been received, among which the contributions are focused on 
+              theoretical, computer simulation- based research, and laboratory-scale experiments. 
+              Amongst these manuscripts, 129 papers have been included in the IOP [Material Science and Engineering] 
+              proceedings..</p>
+              <p class=" justify-content-center"
+              style="font-size: 20px; text-align:justify; text-justify:inter-word;font-weight:500;">Link of the published ICCRDA 2020
+               Proceedings: https://iopscience.iop.org/issue/1757-899X/1022/1 </p>
+      <!--  <img src="gallery/duytancampus.jpg" alt="" style="width:80%;border-radius:10px; height:35vw;" class="mt-4 mb-4">-->
         
-                  <p style="padding: 20px;font-size: 20px; font-weight:500;">Link of the published ICCRDA 2020 Proceedings:
-                     https://iopscience.iop.org/issue/1757-899X/1022/1</p>
+      </div>
     </div>
   </div>
-  </div>
-
-
-  <!-- start of footer -->
-
   <footer class="footer bg-dark"></footer>
 
   <script src="js/main-js.js"></script>
