--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
               onmouseover="this.stop();" onmouseout="this.start();" height="270">
               <a href="#" class="dates text-center text-primary d-none">ICCRDA 2024 will be organsied by
                  Duy Tan University, Vietnam in January 2025. </a>
-            <!--  <hr id="hrr">
-              <a href="#" class="dates text-center text-primary d-none">Some of Selected Extended Papers will be Submit
+              <hr id="hrr">
+            <!--  <a href="#" class="dates text-center text-primary d-none">Some of Selected Extended Papers will be Submit
                 for Publication in
                 SCI/SCI-E/SCOPUS Indexed Journals</a>
               <hr id="hrr">
