--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
           <div class="card-body marquees">
             <marquee width="100%" behavior="scroll" direction="up" scrollamount="3" class="text-center dates mb-0"
               onmouseover="this.stop();" onmouseout="this.start();" height="270">
-              <a href="#" class="dates text-center text-primary d-none">ICCRDA 2024 will be organsied by
+              <a href="#" class="dates text-center text-primary">ICCRDA 2024 will be organsied by
                  Duy Tan University, Vietnam in January 2025. </a>
               <hr id="hrr">
             <!--  <a href="#" class="dates text-center text-primary d-none">Some of Selected Extended Papers will be Submit
