--- a/Registrations.html
+++ b/Registrations.html
@@ -36,7 +36,7 @@
       <div class="col-12 col-sm-12">
         <div style="padding: 20px;">
           <h1 class="text-center display-4" style="font-weight: 500;">Registrations</h1>
-          <p style="font-family: 'Roboto', sans-serif;font-size: 20px; font-weight:600;">Step1 – Registration Fee: It is
+         <!-- <p style="font-family: 'Roboto', sans-serif;font-size: 20px; font-weight:600;">Step1 – Registration Fee: It is
             mandatory for at
             least one author of an accepted
             paper to register in order for the paper to appear in the proceedings and included in the Technical Program.
@@ -121,7 +121,7 @@
           Kindly pay the registration fees through online transaction only and mail us the receipt/transaction number
           along with your paper id and registered author id card.</strong>
 
-        <!-- <p> <b>ComSIA 2024 is committed to Empowering women Researchers & to encourage it, ComSIA have the discounts as
+         <p> <b>ComSIA 2024 is committed to Empowering women Researchers & to encourage it, ComSIA have the discounts as
             per the following guidelines: <br>
 
             1. If the paper includes a female author/coauthor, then the paper is eligible for a 10% discount on total
