--- a/downloads.html
+++ b/downloads.html
@@ -45,7 +45,7 @@
     <div class="row">
 
 
-      <div class="col col-12 col-lg-6 col-md-4">
+      <div class="col col-12 col-lg-6 col-md-4 ">
         <a href="http://dosci-conf.com/ManuscriptguidelinesforEnglishbooks.pdf" target="_blank"><button class="btn mb-2"
             style="width:100%;">
             Manu Script Guidelines <i class="fa fa-download"></i></button></a>
@@ -55,7 +55,7 @@
             style="width:100%;"> Checklist <i class="fa fa-download"></i></button></a>
 
       </div>
-      <div class="col col-12 col-lg-6 col-md-4">
+      <div class="col col-12 col-lg-6 col-md-4 mb-2">
         <a href="/ICCRDA-2024/gallery/Springer DOC(1).zip" target="_blank"><button class="btn mb-2" style="width:100%;">
             Springer Word Template <i class="fa fa-download"></i></button></a>
 
