--- a/prevconf.html
+++ b/prevconf.html
@@ -55,7 +55,7 @@
               proceedings..</p>
               <p class=" justify-content-center"
               style="font-size: 20px; text-align:justify; text-justify:inter-word;font-weight:500;">Link of the published ICCRDA 2020
-               Proceedings: https://iopscience.iop.org/issue/1757-899X/1022/1 </p>
+              <a href="https://iopscience.iop.org/issue/1757-899X/1022/1">Proceedings: https://iopscience.iop.org/issue/1757-899X/1022/1 </a> </p>
       <!--  <img src="gallery/duytancampus.jpg" alt="" style="width:80%;border-radius:10px; height:35vw;" class="mt-4 mb-4">-->
         
       </div>
