--- a/downloads.html
+++ b/downloads.html
@@ -51,15 +51,15 @@
             Manu Script Guidelines <i class="fa fa-download"></i></button></a>
 
 
-        <a href="http://dosci-conf.com/Checklist.pdf" target="_blank"><button class="btn"
+        <a href="http://dosci-conf.com/Checklist.pdf" target="_blank"><button class="btn mb-2"
             style="width:100%;"> Checklist <i class="fa fa-download"></i></button></a>
 
       </div>
-      <div class="col col-12 col-lg-6 col-md-4 mb-2">
+      <div class="col col-12 col-lg-6 col-md-4 ">
         <a href="/ICCRDA-2024/gallery/Springer DOC(1).zip" target="_blank"><button class="btn mb-2" style="width:100%;">
             Springer Word Template <i class="fa fa-download"></i></button></a>
 
-        <a href="/ICCRDA-2024/gallery/Springer Latex(1).zip" target="_blank"><button class="btn" style="width:100%;">
+        <a href="/ICCRDA-2024/gallery/Springer Latex(1).zip" target="_blank"><button class="btn mb-2" style="width:100%;">
             Springer LaTex Template <i class="fa fa-download"></i></button></a>
 
       </div>
