--- a/steering_committee.html
+++ b/steering_committee.html
@@ -53,16 +53,20 @@
           <h5 class="steering-text">(Kuwait University, Kuwait)</h5>
         </div>
         <div class="row2-col2 box-style">
+          <h5 class="steering-text">Prof. Nguyen Gia Nhu</h5>
+          <h5 class="steering-text">(Duy Tan University, Vietnam)</h5>
+        </div>
+       <!-- <div class="row2-col2 box-style">
           <h5 class="steering-text">Prof. Oscar Castillo</h5>
           <h5 class="steering-text">(Tijuana Institute of Technology, Mexico)</h5>
-        </div>
+        </div>-->
       </div>
     </div>
 
     <h5 class="steering-headers">Honorary Chair(s):</h5>
     <div class="boxes m-auto">
       <div class="rows-3 rows">
-        <div class="row3-col1 box-style">
+      <!--  <div class="row3-col1 box-style">
           <h5 class="steering-text">Prof. Janusz Kacprzyk</h5>
           <h5 class="steering-text">(Head, Intelligent Systems Laboratory, System Research Institute, Polish Academy of
             Sciences, Warsaw, Poland)</h5>
@@ -70,10 +74,14 @@
         <div class="row3-col2 box-style">
           <h5 class="steering-text">Prof. Vaclav Snasel</h5>
           <h5 class="steering-text">(Rector, VSB-Technical University of Ostrava, Czech Republic)</h5>
-        </div>
+        </div>-->
         <div class="row3-col2 box-style">
           <h5 class="steering-text">Prof. Manu Malek</h5>
           <h5 class="steering-text">(EiC Computer and Electrical Engineering, Stevens Institute of Technology, USA)</h5>
+        </div>
+        <div class="row3-col2 box-style">
+          <h5 class="steering-text">Jon G. Hall</h5>
+          <h5 class="steering-text">(EiC Expert Systems (WILEY), The Open University, UK)</h5>
         </div>
       </div>
     </div>
@@ -81,9 +89,13 @@
     <h5 class="steering-headers">Conference Chair(s):</h5>
     <div class="boxes m-auto">
       <div class="rows-4 rows">
-        <div class="row4-col1 box-style">
+      <!--  <div class="row4-col1 box-style">
           <h5 class="steering-text">Prof. Ajay Jaiswal</h5>
           <h5 class="steering-text">(Principal, School of Open Learning, University of Delhi)</h5>
+        </div>-->
+        <div class="row4-col1 box-style">
+          <h5 class="steering-text">Prof. Gwanggil Jeon </h5>
+          <h5 class="steering-text">(Incheon National University, Korea)</h5>
         </div>
         <div class="row4-col1 box-style">
           <h5 class="steering-text">Prof. Ahmed Taher Azar </h5>
@@ -93,10 +105,10 @@
           <h5 class="steering-text">Prof. Joel J P C Rodrigues</h5>
           <h5 class="steering-text">(National Institute of Telecommunications (Inatel), Brazil)</h5>
         </div>
-        <div class="row4-col2 box-style">
+        <!--<div class="row4-col2 box-style">
           <h5 class="steering-text">Prof. Valentina Emilia Balas</h5>
           <h5 class="steering-text">(Aurel Vlaicu University of Arad, Romania)</h5>
-        </div>
+        </div>-->
 
       </div>
     </div>
@@ -109,6 +121,10 @@
           <h5 class="steering-text">(Università della Calabria, Italy)</h5>
         </div>
         <div class="row5-col1 box-style">
+          <h5 class="steering-text">Dr. Imad Riza</h5>
+          <h5 class="steering-text">(University of Applied Sciences for Technology Compiegne, France)</h5>
+        </div>
+        <!--<div class="row5-col1 box-style">
           <h5 class="steering-text">Prof. Anil K Ahlawat</h5>
           <h5 class="steering-text">(KIET Group of Institutes, Ghaziabad)</h5>
         </div>
@@ -119,11 +135,11 @@
         <div class="row5-col2 box-style">
           <h5 class="steering-text">Prof. Yogadhar Pandey</h5>
           <h5 class="steering-text">(Babasaheb Bhimrao Ambedkar University, India)</h5>
-        </div>
+        </div>-->
       </div>
     </div>
 
-    <h5 class="steering-headers">Editorial Chair(s):</h5>
+   <!-- <h5 class="steering-headers">Editorial Chair(s):</h5>
     <div class="boxes m-auto">
       <div class="rows-6 rows">
         <div class="row6-col1 box-style">
@@ -135,7 +151,7 @@
           <h5 class="steering-text">(Bhagwan Parshuram Institute of Technology, Delhi)</h5>
         </div>
       </div>
-    </div>
+    </div>-->
 
     <h5 class="steering-headers">Publication Chair(s):</h5>
     <div class="boxes m-auto">
@@ -144,10 +160,10 @@
           <h5 class="steering-text">Dr. Vicente García Díaz</h5>
           <h5 class="steering-text">(University of Oviedo, Spain)</h5>
         </div>
-        <div class="row7-col2 box-style">
+      <!--  <div class="row7-col2 box-style">
           <h5 class="steering-text">Dr. Ashish Khanna</h5>
           <h5 class="steering-text">(Maharaja Agrasen Institute of Technology (GGSIPU), New Delhi)</h5>
-        </div>
+        </div>-->
         <div class="row7-col2 box-style">
           <h5 class="steering-text">Dr. Utku Kose</h5>
           <h5 class="steering-text">(Suleyman Demirel University, Isparta, Turkey)</h5>
@@ -173,18 +189,18 @@
           <h5 class="steering-text">Dr. Jafar A. Alzubi</h5>
           <h5 class="steering-text">(Al-Balqa Applied University, Salt Jordan)</h5>
         </div>
-        <div class="row9-col2 box-style">
+       <!-- <div class="row9-col2 box-style">
           <h5 class="steering-text">Dr. Hamid Reza Boveiri</h5>
           <h5 class="steering-text">(Sama College, IAU, Shoushtar Branch, Shoushtar, Iran)</h5>
-        </div>
+        </div>-->
         <div class="row9-col3 box-style">
           <h5 class="steering-text">Dr. M. Tanveer</h5>
           <h5 class="steering-text">(Indian Institute of Technology, Indore)</h5>
         </div>
-        <div class="row9-col3 box-style">
+       <!-- <div class="row9-col3 box-style">
           <h5 class="steering-text">Dr. Bilal Alhayani </h5>
           <h5 class="steering-text">(Yildiz Technical University, Turkey)</h5>
-        </div>
+        </div>-->
       </div>
     </div>
 
@@ -199,20 +215,20 @@
           <h5 class="steering-text">Dr. Suresh Chavan</h5>
           <h5 class="steering-text">(IIIT Raichur, India)</h5>
         </div>
-        <div class="row10-col3 box-style">
+      <!--  <div class="row10-col3 box-style">
           <h5 class="steering-text">Dr. Gulshan Shrivastava</h5>
           <h5 class="steering-text">(Galgotias University, New Delhi, India)</h5>
-        </div>
+        </div>-->
 
       </div>
     </div>
     <h5 class="steering-headers">Convener(s):</h5>
     <div class="boxes m-auto">
       <div class="rows-13 rows">
-        <div class="row13-col2 box-style">
+       <!-- <div class="row13-col2 box-style">
           <h5 class="steering-text">Dr. Sameer Anand</h5>
           <h5 class="steering-text">(Department of Operational Research, University of Delhi)</h5>
-        </div>
+        </div>-->
         <div class="row13-col1 box-style">
           <h5 class="steering-text">Dr. Aditya Khamparia</h5>
           <h5 class="steering-text">(Babasaheb Bhimrao Ambedkar University, Lucknow, India)</h5>
@@ -221,10 +237,10 @@
           <h5 class="steering-text">Prof. Projesh Roy</h5>
           <h5 class="steering-text">(Joint Director, Campus of Open Learning, University of Delhi, India)</h5>
         </div>
-        <div class="row13-col2 box-style">
+      <!--  <div class="row13-col2 box-style">
           <h5 class="steering-text">Dr. Pradeep Kumar Mallick</h5>
           <h5 class="steering-text">(KIIT University, India)</h5>
-        </div>
+        </div>-->
       </div>
     </div>
   </div>
