--- a/index.html
+++ b/index.html
@@ -60,6 +60,22 @@
 
     <div class="carousel slide" id="mycarousel" data-ride="carousel">
       <div class="carousel-inner" role="listbox">
+        <div class="carousel-item img-fluid zoom">
+          <img class="d-block img-fluid" src="gallery/duuni.jpg" alt="fourthslide"
+            style="width:100%;border-radius:10px; height:40vw;">
+
+          <div class="carousel-caption">
+            <h3 class="image-title">University of Delhi, Delhi</h3>
+          </div>
+        </div>
+        <div class="carousel-item img-fluid zoom">
+          <img class="d-block img-fluid" src="gallery/raju.png" alt="fourthslide"
+            style="width:100%;border-radius:10px; height:40vw;">
+
+          <div class="carousel-caption">
+            <h3 class="image-title">Shaheed Rajguru College of Applied Sciences, Delhi</h3>
+          </div>
+        </div>
         <div class="carousel-item active zoom">
           <center><img class="d-block img-fluid"
               src="https://images.pexels.com/photos/1209978/pexels-photo-1209978.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
@@ -126,8 +142,8 @@
           primary goal of the conference is to promote the exchange of innovative scientific information between
           researchers, developers, engineers, students, and practitioners. Overall the conference will provide the
           researchers and attendees with prospects for national and international collaboration and networking among
-          universities and institutions from India and abroad for promoting research. ICCRDA 2025 is being held at Duy
-          Tan University, Vietnam. All the accepted papers are published in the proceedings of ICCRDA 2025 [indexed by
+          universities and institutions from India and abroad for promoting research. ICCRDA 2025 will be jointly organized by School of Open Learning, University of Delhi 
+          ,Shaheed Rajguru College of Applied Sciences, University of Delhi and Duy Tan University, Vietnam on 17-18 January, 2025. All the accepted papers are published in the proceedings of ICCRDA 2025 [indexed by
           Scopus and other reputed databases] and some selected papers will be published in SCI/SCOPUS/WoS/DBLP/ACM
           indexed Journals.</p>
         <a class="btn btn-info" href="https://easychair.org/conferences/?conf=iccrda2020" target="_blank">Paper
